Fix "li" font size on mobile device.

--- a/_sass/_responsive.scss
+++ b/_sass/_responsive.scss
@@ -53,7 +53,7 @@
             font-size:1.4em;
         }
         
-        p {
+        p, li {
             font-size:0.9em;
         }
     }
